<resources>
    <string name="app_name">My recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="quantity">quantity</string>
    <string name="ingredient">ingredient</string>
    <string name="search">search</string>
    <string name="change_view">change view</string>
    <string name="image">image</string>
    <string name="category">Category</string>
    <string name="category_image">category image</string>
    <string name="add">add</string>
    <string name="image_url">Image url</string>
    <string name="instructions">Instructions</string>
    <string name="save">Save</string>
    <string name="amount">amount</string>
    <string name="add_ingredient_button">add ingredient button</string>
    <string name="new_recipe">New recipe:</string>
    <string name="categories">Categories</string>
    <string name="vegetables">Vegetables</string>
    <string name="desserts">Desserts</string>
    <string name="bakery">Bakery</string>
    <string name="meat">Meat</string>
    <string name="drinks">Drinks</string>
    <string name="main_course">Main course</string>
    <string name="soup">Soup</string>
    <string name="open_categories_icon_button">open categories icon button</string>
    <string name="save_recipe">Save recipe</string>
    <string name="cancel">Cancel</string>
    <string name="like_icon">like icon</string>
    <string name="delete_this_recipe">Delete this recipe?</string>
    <string name="delete">Delete</string>
    <string name="test">test</string>
    <string name="test_capslock">TEST</string>
</resources>