<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/new_recipe_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/new_recipe"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like_btn_in_add_recipe"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:icon="@drawable/ic_empty_like"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_add_tf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_recipe_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_add_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_tf" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_url_add_tf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/image_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_url_add_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_url_add_tf" />

        <LinearLayout
            android:id="@+id/ingredients_add_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_url_add_tf" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_ingredient_btn"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/add_ingredient_button"
            app:icon="@drawable/ic_add_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredients_add_container" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_ingredient_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_categories_btn"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/open_categories_icon_button"
            android:text="@string/categories"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="16sp"
            app:icon="@drawable/ic_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_ingredients" />

        <LinearLayout
            android:id="@+id/categories_checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_categories_btn">

            <CheckBox
                android:id="@+id/checkbox_child_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vegetables" />

            <CheckBox
                android:id="@+id/checkbox_child_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desserts" />

            <CheckBox
                android:id="@+id/checkbox_child_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bakery" />

            <CheckBox
                android:id="@+id/checkbox_child_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat" />

            <CheckBox
                android:id="@+id/checkbox_child_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat" />

            <CheckBox
                android:id="@+id/checkbox_child_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drinks" />

            <CheckBox
                android:id="@+id/checkbox_child_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_course" />

            <CheckBox
                android:id="@+id/checkbox_child_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soup" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_checkbox_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/instructions_add_tf"
            style="Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_categories">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/instructions_add_et"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="15" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions_add_tf" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

